# Addra

./: LICENSE  README.md  env_setup.sh
src/: .gitignore
src/client/: CMakeLists.txt  client.cpp
src/common/: .gitignore  globals.h
src/server/master/: CMakeLists.txt  master.cpp
src/server/worker/: CMakeLists.txt  worker.cpp
